# FormosaStay

./: App.tsx  BUSINESS_LOGIC_ISSUES.md  FRONTEND_BACKEND_INTEGRATION.md  Journal.ipynb  README.md  ROOM_DASHBOARD_IMPLEMENTATION.md  docker-compose.yml  index.html  package.json  types.ts
backend/: .env  README.md  main.py  pyproject.toml  run.py  run.sh
backend/alembic/: env.py
backend/alembic/sql/: 0000_schema.sql  0001_seed.sql  0002_v_contract.sql  0002_v_lease_status.sql  0002_v_room_availability.sql  0002_v_room_current_tenant.sql  0002_v_room_dashboard_summary.sql  0002_v_room_electricity_history.sql  0002_v_room_payment_history.sql  0002_v_tenant_complete.sql  0002_v_tenant_lease.sql  0002_v_user_account.sql  0002_v_user_role.sql  0003_insert_lease.sql  0003_insert_transactions.sql  0003_insert_transactions2.sql
backend/alembic/versions/: 0001_initial_schema.py  0002_create_views.py  0002_remove_lease_status_column.py  4b6dd913b124_add_vehicle_plate_to_lease.py  e240941618b9_add_user_and_cash_flow_tables.py  f45c1ef96b82_initial_schema.py
backend/app/: config.py  exceptions.py  main.py
backend/app/db/: ROOM_DASHBOARD_README.md  session.py  tenant_latest_contract.sql
backend/app/models/: __init__.py  base.py  building.py  cash_flow.py  electricity.py  invoice.py  lease.py  payment.py  room.py  tenant.py  user.py
backend/database/: db_manager.py  seed.sql
backend/db_tools/: __init__.py  migration_utils.py  process_transactions.py  transactions.csv
backend/docs/: lease_discount.md
backend/tests/: conftest.py  documentation.ipynb
(+69 files in other folders)
